# UUST-Schedule

./: README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
src/uust_schedule/: __init__.py
tests/: test_uust_schedule.py
